--- a/event-object/dropdown/task.css
+++ b/event-object/dropdown/task.css
@@ -5,6 +5,7 @@
   position: relative;
   font-family: Helvetica;
   font-weight: 300;
+  margin-bottom: 15px;
 }
 
 .dropdown__value {
@@ -24,7 +25,8 @@
 
 .dropdown__list {
   display: none;
-  position: absolute;
+  max-width: 150px;
+  position: relative;
   list-style-type: none;
   padding: 0;
   margin: 0;
